<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DriveActivity">
    <item android:id="@+id/action_example" android:title="@string/cruise_mode"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
        app:showAsAction="always"
        android:title="@string/secure_connect"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/insecure_connect_scan"
        app:showAsAction="never"
        android:title="@string/insecure_connect"/>

    <item
        android:id="@+id/discoverable"
        app:showAsAction="never"
        android:title="@string/discoverable"/>
</menu>
